@@ -33,17 +33,17 @@ public:
 
 	//! Gets all triangles which lie within a specific bounding box.
 	virtual void getTriangles(core::triangle3df* triangles, s32 arraySize,
-		s32& outTriangleCount, const core::aabbox3d<f32>& box, 
+		s32& outTriangleCount, const core::aabbox3d<f32>& box,
 		const core::matrix4* transform=0) const;
 
 	//! Gets all triangles which have or may have contact with a 3d line.
 	virtual void getTriangles(core::triangle3df* triangles, s32 arraySize,
-		s32& outTriangleCount, const core::line3d<f32>& line, 
+		s32& outTriangleCount, const core::line3d<f32>& line,
 		const core::matrix4* transform=0) const;
 
 	//! Adds a triangle selector to the collection of triangle selectors
 	//! in this metaTriangleSelector.
-	virtual void addTriangleSelector(ITriangleSelector* toAdd); 
+	virtual void addTriangleSelector(ITriangleSelector* toAdd);
 
 	//! Removes a specific triangle selector which was added before	from the collection.
 	virtual bool removeTriangleSelector(ITriangleSelector* toRemove);
@@ -52,7 +52,7 @@ public:
 	virtual void removeAllTriangleSelectors();
 
 	//! Return the scene node associated with a given triangle.
-	virtual const ISceneNode* getSceneNodeForTriangle(u32 triangleIndex) const;
+	virtual ISceneNode* getSceneNodeForTriangle(u32 triangleIndex) const;
 
 private:
 
