@@ -23,7 +23,7 @@ CSceneNodeAnimatorCollisionResponse::CSceneNodeAnimatorCollisionResponse(
 		f32 slidingSpeed)
 : Radius(ellipsoidRadius), Gravity(gravityPerSecond), Translation(ellipsoidTranslation),
 	World(world), Object(object), SceneManager(scenemanager), LastTime(0),
-	SlidingSpeed(slidingSpeed), CollisionCallback(0),
+	SlidingSpeed(slidingSpeed), CollisionNode(0), CollisionCallback(0),
 	Falling(false), IsCamera(false), AnimateCameraTarget(true), CollisionOccurred(false),
 	FirstUpdate(true)
 {
